Changes go downward, months go upward.  Please scroll to the bottom for a legend.
Changelog started January 1, 2004; Currently at $Revision: 10081 $.

SMF 2.0                                                                      ???
================================================================================
September 2010
--------------------------------------------------------------------------------
 ! Source files should be UTF-8 encoded. (convert.php, Subs.php)
 ! Incorrect $smcFunc function use (Subs-Calendar.php)
 ! Removed classic and babylon files from the core (they are in their own repository now) (/Themes/classic and Themes/babylon files) [Bug 4376]
 ! Removed babylon directory (Themes/babylon) [Bug 4376]
 ! Removed classic directory (Themes/classic) [Bug 4376]
 ! Removed smflib (it is in tools repository now) (other/smflib)
 ! Removed tools (they are in tools repository now) (other/tools content)
 
August 2010
--------------------------------------------------------------------------------
 * The new replies template for preview JavaScript was using outdated post layout. (Post.template.php) [Bug 4387]
 * "new" images for new replies inserted by JavaScript were not removed once the post is no longer unread. (Post.template.php) [Bug 4397]
 ! PM ignore settings were ignored. (Subs-Post.php) [Bug 4401]
 ! File counts for attachment directories were counted wrongfully. (ManageAttachments.php) [Bug 4381]
 ! Unnecessary logouts following password conversion. (LogInOut.php) [Bug 4365]
 ! Missing sub template caused premature termination of the script instead of displaying error. (Errors.php, Subs.php) [Bug 4402]
 ! Approvals by quick moderation were not logged properly. (MessageIndex.php)
 * Got the last of th smalltext in (MessageIndex.template.php)
 * Applied "fix" to (Stats.template.php) [Bug 4403]
 * Fixed submit button bug in (PersonalMessage.template.php)