@@ -1993,7 +1993,7 @@ function loadLanguage($template_name, $lang = '', $fatal = true, $force_reload =
  */
 function getBoardParents($id_parent)
 {
-	global $scripturl, $txt, $smcFunc;
+	global $scripturl, $smcFunc;
 
 	$boards = array();
 
@@ -2750,6 +2750,7 @@ function cache_put_data($key, $value, $ttl = 120)
 				set_file_buffer($fh, 0);
 				flock($fh, LOCK_EX);
 				$cache_bytes = fwrite($fh, $cache_data);
+				flock($fh, LOCK_UN);
 				fclose($fh);
 
 				// Check that the cache write was successful; all the data should be written
