@@ -95,7 +95,7 @@ if (isset($_GET['scheduled']))
 if (!empty($modSettings['enableCompressedOutput']) && !headers_sent())
 {
 	// If zlib is being used, turn off output compression.
-	if (@ini_get('zlib.output_compression') == '1' || @ini_get('output_handler') == 'ob_gzhandler' || @version_compare(PHP_VERSION, '4.2.0') == -1)
+	if (@ini_get('zlib.output_compression') == '1' || @ini_get('output_handler') == 'ob_gzhandler')
 		$modSettings['enableCompressedOutput'] = '0';
 	else
 	{
@@ -195,8 +195,8 @@ function smf_main()
 	if (!empty($topic) && empty($board_info['cur_topic_approved']) && !allowedTo('approve_posts') && ($user_info['id'] != $board_info['cur_topic_starter'] || $user_info['is_guest']))
 		fatal_lang_error('not_a_topic', false);
 
-	// Do some logging, unless this is an attachment, avatar, theme option or XML feed.
-	if (empty($_REQUEST['action']) || !in_array($_REQUEST['action'], array('dlattach', 'jsoption', '.xml', 'xmlhttp', 'verificationcode')))
+	// Do some logging, unless this is an attachment, avatar, toggle of editor buttons, theme option or XML feed.
+	if (empty($_REQUEST['action']) || !in_array($_REQUEST['action'], array('dlattach', 'jseditor', 'jsoption', '.xml', 'xmlhttp', 'verificationcode')))
 	{
 		// Log this user as online.
 		writeLog();
